--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
 
         <!-- ROW 6 -->
+        <!-- ? problem -->
         <div class="row">
             <div class="col-6">
                 <div class="row">
@@ -73,10 +74,97 @@
                     <div class="col-8">col 8</div>
                 </div>
             </div>
-            <div class="col-6"></div>
-
-
+            <div class="col-6">
+                <div class="row red">
+                    <div class="col-6">col 6</div>
+                    <div class="col-6">col 6</div>
+                </div>
+            </div>
         </div>
+
+        <!-- ROW 7 -->
+        <div class="row m-t-10">
+            <div class="col-12"></div>
+        </div>
+
+        <!-- ROW 8 -->
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-11"></div>
+        </div>
+
+        <!-- ROW 9 -->
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-10"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-9"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-8"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-5"></div>
+            <div class="col-7"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        </div>
+
+        <!-- offset -->
+        <div class="row m-t-10">
+            <h1>Offset</h1>
+        </div>
+
+        <div class="row">
+            <div class="col-1 col-offset-11"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-2 col-offset-10"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-3 col-offset-9"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-4 col-offset-8"></div>
+        </div>
+        <div class="row">
+            <div class="col-5 col-offset-7"></div>
+        </div>
+        <div class="row">
+            <div class="col-6 col-offset-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-7 col-offset-5"></div>
+        </div>
+        <div class="row">
+            <div class="col-8 col-offset-4"></div>
+        </div>
+        <div class="row">
+            <div class="col-9 col-offset-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-10 col-offset-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-11 col-offset-1"></div>
+        </div>
+
+
+
+
+
     </div>
     
 </body>
