--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- google font -->
     <!-- font-awesome -->
     <!-- link flex-css -->
-    <link rel="stylesheet" href="./css/flex-12.css">
+    <link rel="stylesheet" href="./css/12boolflex.css">
     <!-- link css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -67,98 +67,110 @@
         <!-- ROW 6 -->
         <!-- ? problem -->
         <div class="row">
-            <div class="col-6">
+
+            <div class="col-6 pad-10">
                 <div class="row">
-                    <div class="col-2">col 2</div>
-                    <div class="col-2">col 2</div>
-                    <div class="col-8">col 8</div>
+                    <div class="col-2 border">
+                        <span class="nest">nested col 2</span>
+                    </div>
+                    <div class="col-2 border">
+                        <span class="nest">nested col 2</span>
+                    </div>
+                    <div class="col-8 border">
+                        <span class="nest">nested col 8</span>
+                    </div>
                 </div>
             </div>
-            <div class="col-6">
-                <div class="row red">
-                    <div class="col-6">col 6</div>
-                    <div class="col-6">col 6</div>
+
+            <div class="col-6 pad-10">
+                <div class="row">
+                    <div class="col-6 border">
+                        <span class="nest">col 6</span>
+                    </div>
+                    <div class="col-6 border">
+                        <span class="nest">col 6</span>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- ROW 7 -->
         <div class="row m-t-10">
-            <div class="col-12"></div>
+            <div class="col-12 height"></div>
         </div>
 
         <!-- ROW 8 -->
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-11"></div>
+            <div class="col-1 height"></div>
+            <div class="col-11 height"></div>
         </div>
 
         <!-- ROW 9 -->
         <div class="row">
-            <div class="col-2"></div>
-            <div class="col-10"></div>
+            <div class="col-2 height"></div>
+            <div class="col-10 height"></div>
         </div>
 
         <div class="row">
-            <div class="col-3"></div>
-            <div class="col-9"></div>
+            <div class="col-3 height"></div>
+            <div class="col-9 height"></div>
         </div>
 
         <div class="row">
-            <div class="col-4"></div>
-            <div class="col-8"></div>
+            <div class="col-4 height"></div>
+            <div class="col-8 height"></div>
         </div>
 
         <div class="row">
-            <div class="col-5"></div>
-            <div class="col-7"></div>
+            <div class="col-5 height"></div>
+            <div class="col-7 height"></div>
         </div>
 
         <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6"></div>
+            <div class="col-6 height"></div>
+            <div class="col-6 height"></div>
         </div>
 
-        <!-- offset -->
+        <!-- offset-->
         <div class="row m-t-10">
             <h1>Offset</h1>
         </div>
 
         <div class="row">
-            <div class="col-1 col-offset-11"></div>
+            <div class="col-1 col-offset-11 height"></div>
         </div>
 
         <div class="row">
-            <div class="col-2 col-offset-10"></div>
+            <div class="col-2 col-offset-10 height"></div>
         </div>
 
         <div class="row">
-            <div class="col-3 col-offset-9"></div>
+            <div class="col-3 col-offset-9 height"></div>
         </div>
 
         <div class="row">
-            <div class="col-4 col-offset-8"></div>
+            <div class="col-4 col-offset-8 height"></div>
         </div>
         <div class="row">
-            <div class="col-5 col-offset-7"></div>
+            <div class="col-5 col-offset-7 height"></div>
         </div>
         <div class="row">
-            <div class="col-6 col-offset-6"></div>
+            <div class="col-6 col-offset-6 height"></div>
         </div>
         <div class="row">
-            <div class="col-7 col-offset-5"></div>
+            <div class="col-7 col-offset-5 height"></div>
         </div>
         <div class="row">
-            <div class="col-8 col-offset-4"></div>
+            <div class="col-8 col-offset-4 height"></div>
         </div>
         <div class="row">
-            <div class="col-9 col-offset-3"></div>
+            <div class="col-9 col-offset-3 height"></div>
         </div>
         <div class="row">
-            <div class="col-10 col-offset-2"></div>
+            <div class="col-10 col-offset-2 height"></div>
         </div>
         <div class="row">
-            <div class="col-11 col-offset-1"></div>
+            <div class="col-11 col-offset-1 height"></div>
         </div>
 
 
