--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- google font -->
     <!-- font-awesome -->
     <!-- link flex-css -->
-    <link rel="stylesheet" href="./css/12boolflex.css">
+    <link rel="stylesheet" href="./css/12bool.css">
     <!-- link css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
